--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body{
     font-family: sofia ,sans-serif;
+    background-color:black;
 }
 h1{
     text-align: center;
-    color:brown;
+    color: white;
     font-family:'Times New Roman', Times, serif;
+    font-size: 55px;
+}
+span{
+    color:brown;
 }
 #container{
     width: 1000px;
